# mattermost-mcp

./: .env.example  .gitignore  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
infra/docker/: .dockerignore  Dockerfile
infra/nomad/: mattermost-mcp.nomad.hcl
src/mattermost_mcp/: __init__.py  config.py  logging.py  main.py
src/mattermost_mcp/api/: health.py
src/mattermost_mcp/clients/: mattermost.py
src/mattermost_mcp/mcp/: __init__.py  server.py
src/mattermost_mcp/mcp/tools/: __init__.py  channels.py  messages.py  monitoring.py  users.py
src/mattermost_mcp/models/: mattermost.py
src/mattermost_mcp/monitoring/: __init__.py  analyzer.py  monitor.py  persistence.py  scheduler.py
tests/: __init__.py  conftest.py  test_mcp_tools.py
