[project]
name = "mattermost-mcp"
version = "1.0.0"
description = "Mattermost FastMCP Server"
authors = [{name = "Anton Degtyarev", email = "ad@velosnet.tech"}]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi[standard]>=0.124,<1",
    "fastmcp>=2.13,<3",
    "mcp[cli]>=1.23,<2",
    "mattermostautodriver>=11.1,<12",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    "apscheduler>=3.11,<4",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.14",
]

[project.scripts]
mattermost-mcp = "mattermost_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mattermost_mcp"]

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "PLR2004", # magic value used in comparison
    "TRY003",  # avoid specifying long messages outside exception class
    "TRY400",  # use logging.exception instead of logging.error (structlog uses different pattern)
    "TRY300",  # consider moving statement to else block (not always applicable)
    "TRY301",  # abstract raise to inner function (not always necessary)
    "PLC0415", # import should be at top-level (intentional lazy imports)
    "PLW0603", # using global statement (intentional singleton pattern)
    "TC001",   # move application import into type-checking block (used at runtime)
    "TC003",   # move stdlib import into type-checking block (not critical)
    "ARG001",  # unused function argument (often needed for API compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "PLR2004", "PLC0415"]  # Allow unused arguments, magic values, and local imports in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
# MyPy configuration for type checking
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "fastmcp.*",
    "mcp.*",
    "mattermostautodriver.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
